add logs | persian date